Upgraded to HttpClient and optimized URL inspection